Reorder pods-form to enhance logic and readability + fix field widths

--- a/ui/css/pods-form.css
+++ b/ui/css/pods-form.css
@@ -21,6 +21,28 @@
     width: 50%;
 }
 
+/**
+    Form tables.
+ */
+
+.form-table tr.pods-field:last-child > th,
+.form-table tr.pods-field:last-child > td {
+    border-bottom: none;
+}
+
+.form-table td .pods-form-ui-field {
+    max-width: 95%;
+}
+
+.form-table.pods-form-ui-table-type-avatar tr.form-field > td,
+.form-table.pods-form-ui-table-type-file tr.form-field > td {
+    padding: 0 10px;
+}
+
+/**
+    Form fields.
+ */
+
 .pods-field label {
     cursor: pointer;
     display: block;
@@ -43,10 +65,56 @@
     margin: 5px 0 0 2px !important;
 }
 
-.pods-pick select {
-    display: block;
-    min-width: 125px;
+div.pods-textfield input,
+.pods-textarea textarea {
+    width: 100%;
 }
+
+/* textarea/wysiwyg */
+.pods-field .wp-editor-container {
+    background-color: #FFF;
+}
+
+textarea.pods-form-ui-field-type-paragraph {
+    font-family: monospace;
+    min-height: 100px;
+    resize: vertical;
+}
+
+/* Link */
+.pods-link-options {
+    background: #fff;
+    padding: 5px 10px 10px;
+    border: 1px solid #dfdfdf;
+}
+.pods-link-options > div {
+    display: inline-block;
+}
+
+/* Date */
+.pods-date input.pods-date-field.hasDatepicker {
+    background: #fff url(../images/calendar16.png) no-repeat 5px 5px;
+    cursor: pointer;
+    padding-left: 25px !important;
+    padding-top: 6px !important;
+    width: 150px;
+}
+
+/* Color */
+input.pods-form-ui-field-type-color {
+    width: 80px;
+}
+
+/* Codemirror */
+.pods-field .CodeMirror {
+    border: 1px solid #999;
+    background-color: #fff;
+    margin: 0;
+}
+
+/**
+    Form fields - boolean/pick/select values.
+ */
 
 .pods-boolean {
     position: relative;
@@ -69,13 +137,9 @@
     padding-top: 1px;
 }
 
-.pods-link-options {
-    background: #fff;
-    padding: 5px 10px 10px;
-    border: 1px solid #dfdfdf;
-}
-.pods-link-options > div {
-    display: inline-block;
+.pods-pick select {
+    display: block;
+    min-width: 125px;
 }
 
 .pods-pick-values {
@@ -87,7 +151,7 @@
     padding: 2px 0;
 }
 
-/* Newer MV based views don't all need borders but we don't want to break other applications of the rule above */
+/* Newer DFV based views don't all need borders but we don't want to break other applications of the rule above */
 .pods-form-ui-field .pods-pick-values,
 .pods-form-ui-field .pods-pick-values li.pods-dfv-list-col {
     border: none;
@@ -110,7 +174,12 @@ select.pods-form-ui-field-type-pick[multiple] {
     border: 1px solid #dfdfdf;
     border-radius: 3px;
     width: 100%;
+    max-width: none;
     max-height: 200px;
+}
+
+select.pods-pick-multi {
+    height: auto !important;
 }
 
 .pods-pick-values ul {
@@ -149,7 +218,6 @@ select.pods-form-ui-field-type-pick[multiple] {
     padding: 0;
 }
 
-
 .pods-pick-values .pods-radio {
     border: 1px solid #dfdfdf;
 }
@@ -157,10 +225,6 @@ select.pods-form-ui-field-type-pick[multiple] {
 .pods-field.pods-boolean:hover,
 .pods-pick-values .pods-radio li:hover {
     background: #f5f5f5;
-}
-
-select.pods-pick-multi {
-    height: auto !important;
 }
 
 .pods-field, p.pods-add-file {
@@ -172,34 +236,6 @@ select.pods-pick-multi {
 }
 .pods-metabox tr.pods-field:first-child {
     border-top: 0;
-}
-
-
-div.pods-textfield input,
-.pods-textarea textarea {
-    width: 100%;
-}
-
-.pods-date input, .pods-number input {
-    min-width: 125px;
-}
-
-textarea.pods-form-ui-field-type-paragraph {
-    font-family: monospace;
-    min-height: 100px;
-    resize: vertical;
-}
-
-.pods-date input.pods-date-field.hasDatepicker {
-    background: #fff url(../images/calendar16.png) no-repeat 5px 5px;
-    cursor: pointer;
-    padding-left: 25px !important;
-    padding-top: 6px !important;
-    width: 150px;
-}
-
-input.pods-form-ui-field-type-color {
-    width: 80px;
 }
 
 /* @todo Improve this, select2 adds inline fixed widths preventing responsive scaling */
@@ -217,31 +253,6 @@ input.pods-form-ui-field-type-color {
     clear: both;
 }
 
-/**
-    Form tables.
- */
-
-.form-table tr.pods-field:last-child > th,
-.form-table tr.pods-field:last-child > td {
-    border-bottom: none;
-}
-
-.form-table td .pods-form-ui-field {
-    max-width: 95%;
-}
-.form-table td .pods-form-ui-field .pods-form-ui-field {
-    max-width: none;
-}
-
-.form-table.pods-form-ui-table-type-avatar tr.form-field > td,
-.form-table.pods-form-ui-table-type-file tr.form-field > td {
-    padding: 0 10px;
-}
-
-.pods-field .wp-editor-container {
-    background-color: #FFF;
-}
-
 /* Side location */
 #side-sortables .form-table .pods-field {
     display: block;
@@ -257,13 +268,6 @@ input.pods-form-ui-field-type-color {
     display: block;
     line-height: inherit;
     padding: 0;
-    margin: 0;
-}
-
-/* Codemirror */
-.pods-field .CodeMirror {
-    border: 1px solid #999;
-    background-color: #fff;
     margin: 0;
 }
 
